{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 60,
  "lineage": "6c2e41f4-b65c-73b1-5e38-a8902837ac39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "debian_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:495599742948:instance/i-06845de5880999e76",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06845de5880999e76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "VExpenses-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a30c69eb7ef25ae1",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-54-166-168-57.compute-1.amazonaws.com",
            "public_ip": "54.166.168.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ba296bae5dc5cfc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004cbaadc2a6c7896",
            "tags": {
              "Name": "VExpenses-EC2"
            },
            "tags_all": {
              "Name": "VExpenses-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0160632c671a6832c"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.main_sg",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599742948:internet-gateway/igw-0a699a30dfd66fac5",
            "id": "igw-0a699a30dfd66fac5",
            "owner_id": "495599742948",
            "tags": {
              "Name": "VExpenses-IGW"
            },
            "tags_all": {
              "Name": "VExpenses-IGW"
            },
            "vpc_id": "vpc-096d14e5d2bd08615"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599742948:route-table/rtb-0fc796991cb51ce49",
            "id": "rtb-0fc796991cb51ce49",
            "owner_id": "495599742948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a699a30dfd66fac5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VExpenses-RouteTable"
            },
            "tags_all": {
              "Name": "VExpenses-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-096d14e5d2bd08615"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bd4e6a89e137701",
            "route_table_id": "rtb-0fc796991cb51ce49",
            "subnet_id": "subnet-004cbaadc2a6c7896"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main_route_table",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599742948:security-group/sg-0160632c671a6832c",
            "description": "Permitir SSH e HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0160632c671a6832c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VExpenses-SG",
            "name_prefix": "",
            "owner_id": "495599742948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VExpenses-SG"
            },
            "tags_all": {
              "Name": "VExpenses-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-096d14e5d2bd08615"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599742948:subnet/subnet-004cbaadc2a6c7896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004cbaadc2a6c7896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599742948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VExpenses-Subnet"
            },
            "tags_all": {
              "Name": "VExpenses-Subnet"
            },
            "vpc_id": "vpc-096d14e5d2bd08615"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599742948:vpc/vpc-096d14e5d2bd08615",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4261a4a47333d78",
            "default_route_table_id": "rtb-009b6d4a8f0307fcb",
            "default_security_group_id": "sg-02e8e5d27a1b96300",
            "dhcp_options_id": "dopt-05dc896fd47dd095b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096d14e5d2bd08615",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009b6d4a8f0307fcb",
            "owner_id": "495599742948",
            "tags": {
              "Name": "VExpenses-VPC"
            },
            "tags_all": {
              "Name": "VExpenses-VPC"
            }
          }
        }
      ]
    }
  ]
}